gcc/testsuite/g++.dg/cpp0x/variadic40.C
// { dg-options "-std=gnu++0x" }
template<typename... Values, typename T>
struct backward_tuple {}; // { dg-error "end" }
